@@ -10,6 +10,7 @@ import com.personal.store_api.entity.ProductVariant;
 import com.personal.store_api.entity.User;
 import com.personal.store_api.enums.ErrorCode;
 import com.personal.store_api.exception.AppException;
+import com.personal.store_api.mapper.CartItemMapper;
 import com.personal.store_api.mapper.ProductVariantMapper;
 import com.personal.store_api.repository.CartRepository;
 import com.personal.store_api.repository.ProductVariantRepository;
@@ -32,50 +33,27 @@ import java.util.stream.Collectors;
 @Slf4j
 public class CartService {
 
-    final CartRepository cartRepository;
-    final ProductVariantRepository productVariantRepository;
-    final UserRepository userRepository;
-    final ProductVariantMapper productVariantMapper;
+    private final CartRepository cartRepository;
+    private final ProductVariantRepository productVariantRepository;
+    private final UserRepository userRepository;
+    private final ProductVariantMapper productVariantMapper;
+    private final CartItemMapper cartItemMapper;
 
-    private User getCurrentUser() {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (authentication == null || !authentication.isAuthenticated()) {
-            throw new AppException(ErrorCode.UNAUTHENTICATED);
-        }
-
-        Object principal = authentication.getPrincipal();
-        String userId;
-
-        if (principal instanceof Jwt jwt) {
-            userId = jwt.getSubject();
-        } else {
-            throw new AppException(ErrorCode.UNAUTHENTICATED);
-        }
-
-        return userRepository.findById(userId)
-                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
-    }
+    private static final int CART_MAX_SIZE = 100;
 
     @Transactional(readOnly = true)
     public List<CartItemResponse> getCartItems() {
         User currentUser = getCurrentUser();
-        List<Cart> carts = cartRepository.findAllByUser(currentUser);
-
-        return carts.stream()
-                .map(this::toCartItemResponse)
-                .collect(Collectors.toList());
+        return cartRepository.findAllByUserOrderByCreatedAtDesc(currentUser)
+                .stream()
+                .map(cartItemMapper::toResponse)
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public List<ProductVariantResponse> getCartProductVariants(Integer cartId) {
-        Cart cart = cartRepository.findById(cartId)
-                .orElseThrow(() -> new AppException(ErrorCode.CART_ITEM_NOT_FOUND));
-
-        ProductVariant variant = cart.getProductVariant();
-        Product product = variant.getProduct();
-
-        // Get all variants for this product
-        return productVariantRepository.findByProduct(product)
+        Cart cart = findCartById(cartId);
+        return productVariantRepository.findByProduct(cart.getProductVariant().getProduct())
                 .stream()
                 .map(productVariantMapper::toProductVariantResponse)
                 .toList();
@@ -86,19 +64,14 @@ public class CartService {
         User currentUser = getCurrentUser();
 
         // Check if user already has 100 items in cart
-        int currentCartSize = cartRepository.countByUser(currentUser);
-        if (currentCartSize >= 100) {
+        if (cartRepository.countByUser(currentUser) >= CART_MAX_SIZE) {
             throw new AppException(ErrorCode.CART_MAX_ITEMS_REACHED);
         }
 
         // Get product variant
-        ProductVariant variant = productVariantRepository.findById(request.getProductVariantId())
-                .orElseThrow(() -> new AppException(ErrorCode.PRODUCT_VARIANT_NOT_FOUND));
+        ProductVariant variant = findVariantById(request.getProductVariantId());
 
-        // Check stock quantity
-        if (variant.getStockQuantity() == null || variant.getStockQuantity() <= 0) {
-            throw new AppException(ErrorCode.PRODUCT_OUT_OF_STOCK);
-        }
+        checkStockQuantity(variant);
 
         // Check if requested quantity exceeds available stock
         if (request.getQuantity() > variant.getStockQuantity()) {
@@ -121,20 +94,14 @@ public class CartService {
                 .build();
 
         Cart savedCart = cartRepository.save(cart);
-        return toCartItemResponse(savedCart);
+        return cartItemMapper.toResponse(savedCart);
     }
 
     @Transactional
     public CartItemResponse updateCartItem(Integer cartId, CartItemUpdateRequest request) {
         User currentUser = getCurrentUser();
-
-        Cart cart = cartRepository.findById(cartId)
-                .orElseThrow(() -> new AppException(ErrorCode.CART_ITEM_NOT_FOUND));
-
-        // Verify ownership
-        if (!cart.getUser().getId().equals(currentUser.getId())) {
-            throw new AppException(ErrorCode.UNAUTHORIZED);
-        }
+        Cart cart = findCartById(cartId);
+        verifyCartOwnership(cart, currentUser);
 
         ProductVariant variant = cart.getProductVariant();
 
@@ -151,21 +118,14 @@ public class CartService {
             cart.setQuantity(request.getQuantity());
         }
 
-        Cart updatedCart = cartRepository.save(cart);
-        return toCartItemResponse(updatedCart);
+        return cartItemMapper.toResponse(cart);
     }
 
     @Transactional
     public CartItemResponse updateCartItemVariant(Integer cartId, Integer productVariantId) {
         User currentUser = getCurrentUser();
-
-        Cart cart = cartRepository.findById(cartId)
-                .orElseThrow(() -> new AppException(ErrorCode.CART_ITEM_NOT_FOUND));
-
-        // Verify ownership
-        if (!cart.getUser().getId().equals(currentUser.getId())) {
-            throw new AppException(ErrorCode.UNAUTHORIZED);
-        }
+        Cart cart = findCartById(cartId);
+        verifyCartOwnership(cart, currentUser);
 
         // Check if variant already exists in user's cart (excluding current item)
         Optional<Cart> existingCart = cartRepository.findByUserIdAndProductVariantId(
@@ -176,13 +136,9 @@ public class CartService {
         }
 
         // Get new product variant
-        ProductVariant newVariant = productVariantRepository.findById(productVariantId)
-                .orElseThrow(() -> new AppException(ErrorCode.PRODUCT_VARIANT_NOT_FOUND));
+        ProductVariant newVariant = findVariantById(productVariantId);
 
-        // Check stock quantity
-        if (newVariant.getStockQuantity() == null || newVariant.getStockQuantity() <= 0) {
-            throw new AppException(ErrorCode.PRODUCT_OUT_OF_STOCK);
-        }
+        checkStockQuantity(newVariant);
 
         // Check if current quantity exceeds new variant stock
         if (cart.getQuantity() > newVariant.getStockQuantity()) {
@@ -191,43 +147,47 @@ public class CartService {
 
         // Update cart with new variant
         cart.setProductVariant(newVariant);
-        Cart updatedCart = cartRepository.save(cart);
 
-        return toCartItemResponse(updatedCart);
+        return cartItemMapper.toResponse(cart);
     }
 
     @Transactional
     public void deleteCartItem(Integer cartId) {
         User currentUser = getCurrentUser();
-
-        Cart cart = cartRepository.findById(cartId)
-                .orElseThrow(() -> new AppException(ErrorCode.CART_ITEM_NOT_FOUND));
-
-        // Verify ownership
-        if (!cart.getUser().getId().equals(currentUser.getId())) {
-            throw new AppException(ErrorCode.UNAUTHORIZED);
-        }
+        Cart cart = findCartById(cartId);
+        verifyCartOwnership(cart, currentUser);
 
         cartRepository.deleteByUserIdAndId(currentUser.getId(), cartId);
     }
 
-    private CartItemResponse toCartItemResponse(Cart cart) {
-        ProductVariant variant = cart.getProductVariant();
-        BigDecimal price = variant.getPrice() != null ? variant.getPrice() : BigDecimal.ZERO;
+    private User getCurrentUser() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        Jwt jwt = (Jwt) authentication.getPrincipal();
+        String userId = jwt.getSubject();
 
-        return CartItemResponse.builder()
-                .id(cart.getId())
-                .cartId(cart.getId())
-                .productVariantId(variant.getId())
-                .productName(variant.getProduct() != null ? variant.getProduct().getName() : "Unknown")
-                .variantImage(variant.getImage())
-                .size(variant.getSize())
-                .color(variant.getColor())
-                .price(price)
-                .quantity(cart.getQuantity())
-                .stockQuantity(variant.getStockQuantity())
-                .createdAt(cart.getCreatedAt())
-                .updatedAt(cart.getUpdatedAt())
-                .build();
+        return userRepository.findById(userId)
+                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
+    }
+
+    private Cart findCartById(Integer cartId) {
+        return cartRepository.findById(cartId)
+                .orElseThrow(() -> new AppException(ErrorCode.CART_ITEM_NOT_FOUND));
+    }
+
+    private ProductVariant findVariantById(Integer variantId) {
+        return productVariantRepository.findById(variantId)
+                .orElseThrow(() -> new AppException(ErrorCode.PRODUCT_VARIANT_NOT_FOUND));
+    }
+
+    private void verifyCartOwnership(Cart cart, User user) {
+        if (!cart.getUser().getId().equals(user.getId())) {
+            throw new AppException(ErrorCode.UNAUTHORIZED);
+        }
+    }
+
+    private void checkStockQuantity(ProductVariant variant) {
+        if (variant.getStockQuantity() == null || variant.getStockQuantity() <= 0) {
+            throw new AppException(ErrorCode.PRODUCT_OUT_OF_STOCK);
+        }
     }
 }
